# batuta-ground-truth-mlops-corpus

./: CLAUDE.md  Cargo.toml  Makefile  README.md
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/api/: agents.md  deployment.md  evaluation.md  generation.md  hub.md  models.md  preprocessing.md  rag.md  safety.md  training.md
book/src/examples/: agents.md  evaluation.md  generation.md  hub.md  models.md  rag.md  safety.md  tokenization.md  training.md
book/src/getting-started/: installation.md  quickstart.md
docs/specifications/: bootstrap-corpus.md
examples/: agents_demo.rs  evaluation_demo.rs  generation_demo.rs  hub_demo.rs  rag_demo.rs  random_forest_demo.rs  safety_demo.rs  tokenization_demo.rs  training_demo.rs
src/: lib.rs
src/agents/: memory.rs  mod.rs  planning.rs  tools.rs
src/audio/: features.rs  mod.rs  speech.rs
src/deployment/: export.rs  mod.rs  quantization.rs
src/evaluation/: cross_validation.rs  metrics.rs  mod.rs
src/generation/: chat.rs  mod.rs  prompting.rs  sampling.rs
src/hub/: datasets.rs  mod.rs  registry.rs  versioning.rs
src/inference/: batch.rs  mod.rs  pipeline.rs
src/models/: boosting.rs  mod.rs  transformer.rs  tree.rs
src/multimodal/: document.rs  mod.rs  vision.rs
src/preprocessing/: augmentation.rs  mod.rs  normalization.rs  tokenization.rs
src/rag/: chunking.rs  mod.rs  reranking.rs  retrieval.rs
src/safety/: guardrails.rs  mod.rs  privacy.rs  watermarking.rs
src/training/: callbacks.rs  mod.rs  schedulers.rs  trainer.rs
tests/: integration_aprender.rs  integration_trueno.rs
